# capops-frontend

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: continuous-integration.yml
docs/: architecture.gaphor
include/: AppWindow.hpp
include/domain/: Coordinates.hpp  DisplayMode.hpp  MapProjection.hpp  SectorStates.hpp
include/helpers/: FlightDataServiceTest.hpp  IFlightDataService.hpp  IMapFetcher.hpp  ITileMapService.hpp  MapFetcherCARTO.hpp  MapUtils.hpp  TileMapFetcherCARTO.hpp  TileMapServiceCARTO.hpp
include/pages/: MainPage.hpp
include/panels/: AlertPanel.hpp  OperatorPanel.hpp  SectorDetailsPanel.hpp  StateGridPanel.hpp
include/services/: FlightDataServiceJSON.hpp  FlightDataServiceTest.hpp  FlightDataServiceWS.hpp  TileMapServiceCARTO.hpp  WebSocketClient.hpp
include/utils/: QPointHash.hpp
include/widget/: GridSector.hpp
include/widgets/: AlertButton.hpp  GridCanvas.hpp  GridSector.hpp  GridTrackOverlay.hpp  SegmentedControl.hpp
resources/: resources.qrc  stylesheet.qss  stylesheet.qss.bak  test_data.json
src/: AppWindow.cpp  main.cpp
src/domain/: MapProjection.cpp  SectorStates.cpp
src/helpers/: FlightDataServiceTest.cpp  MapFetcherCARTO.cpp  TileMapFetcherCARTO.cpp  TileMapServiceCARTO.cpp
src/pages/: MainPage.cpp
src/panels/: AlertPanel.cpp  OperatorPanel.cpp  SectorDetailsPanel.cpp  StateGridPanel.cpp
src/services/: FlightDataServiceJSON.cpp  FlightDataServiceTest.cpp  FlightDataServiceWS.cpp  TileMapServiceCARTO.cpp  WebSocketClient.cpp
src/widgets/: AlertButton.cpp  GridCanvas.cpp  GridSector.cpp  (+2 more)
(+21 files in other folders)
